# ai-factory

./: .gitignore  README.md  package-lock.json  package.json  run_backend.sh  run_frontend.sh  svelte.config.js
backend/: .gitignore  __init__.py  database.py  init_db.py  main.py  models.py  pyproject.toml
backend/data/seed/: functions.json
backend/routers/: __init__.py  admin.py  functions.py
backend/services/: __init__.py  database_query.py  python_code.py
backend/services/providers/: __init__.py  anthropic.py  ollama.py  perplexity.py
backend/tests/: __init__.py  test_api.py
backend/utils/: __init__.py  validation.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/lib/components/auth/: UserProfile.svelte
frontend/src/lib/components/demo/: FeatureCard.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/demo/: +page.svelte
frontend/src/routes/factory/: +layout.svelte  +page.svelte
src/: app.css
src/lib/: theme.ts
src/lib/components/auth/: LoginForm.svelte  UserProfile.svelte
src/lib/components/demo/: CodeMirrorTheme.ts  FeatureCard.svelte  JsonEditor.svelte
src/lib/components/factory/: FunctionList.svelte  FunctionSelector.svelte
src/lib/components/ui/: AnimatedGridPattern.svelte  Button.svelte  Card.svelte  Footer.svelte  Navbar.svelte  ThemeController.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/demo/: +layout.svelte  +page.svelte
src/routes/demo/json-editor/: +page.svelte
src/routes/factory/[id]/: +page.svelte
src/routes/factory/new/: +page.svelte
(+16 files in other folders)
